fix warnings and replace lambda by function